Translate a bit of index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 
 	<!-- TRANSLATE: 'title' -->
-	<title>Fireflies</title>
+	<title>Luciérnagas</title>
     <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 	<meta content="utf-8" http-equiv="encoding">
 	<meta charset="utf-8">
@@ -12,24 +12,24 @@
 	<link rel="icon" type="image/png" href="favicon.png">
 
 	<!-- TRANSLATE: 'name' and 'description' -->
-	<meta itemprop="name" content="Fireflies">
-	<meta itemprop="description" content="a small simulation of small fireflies">
+	<meta itemprop="name" content="Luciérnagas">
+	<meta itemprop="description" content="una pequeña simulación de pequeñas luciérnagas">
 	<meta itemprop="image" content="http://ncase.me/fireflies/social/thumbnail.png">
 
 	<!-- TRANSLATE: 'twitter:title' and 'twitter:description' -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@ncasenmare">
-	<meta name="twitter:title" content="Fireflies">
-	<meta name="twitter:description" content="a small simulation of small fireflies">
+	<meta name="twitter:title" content="Luciérnagas">
+	<meta name="twitter:description" content="una pequeña simulación de pequeñas luciérnagas">
 	<meta name="twitter:creator" content="@ncasenmare">
 	<meta name="twitter:image" content="http://ncase.me/fireflies/social/thumbnail.png">
 
 	<!-- TRANSLATE: 'og:title' and 'og:description' -->
-	<meta property="og:title" content="Fireflies">
+	<meta property="og:title" content="Luciérnagas">
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="http://ncase.me/fireflies/">
 	<meta property="og:image" content="http://ncase.me/fireflies/social/thumbnail.png">
-	<meta property="og:description" content="a small simulation of small fireflies">
+	<meta property="og:description" content="una pequeña simulación de pequeñas luciérnagas">
 
 	<!-- Styles -->
 	<link rel="stylesheet" href="css/index.css">
@@ -43,7 +43,7 @@
 
 <!-- The WORDS! -->
 <div id="words">
-<h1>“Fireflies”</h1>
+<h1>“Luciérnagas”</h1>
 
 <p>
 Like Christmas lights gently floating in midair,
@@ -53,11 +53,12 @@ fireflies always add a little bit of magic to the forests they live in.
 <div style="overflow:hidden;">
 	<img src="ui/chaos.png" width="150" style="float: left;"/>
 	<div style="width: 185px; float: right;">
-		<span style="font-size:1.6em; line-height:1.1em;">CLICK &amp; DRAG</span>
+		<span style="font-size:1.6em; line-height:1.1em;">CLICK &amp; MUEVE</span>
+		el ratón
 		<br>
-		to create some
+		para crear
 		<br>
-		firefly chaos &rarr;
+		caos &rarr;
 	</div>
 </div>
 
